logs/watchdog_20251012_1530.log
[12/10/2025 15:30:01,64] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 15:30:01,94] END WATCHDOG 
